# litra-ble-mqtt

./: .gitignore  LICENSE  README.md  litra-mqtt.env.example  litra.py  pyproject.toml  repository.yaml
docs/: MQTT.md  PROTOCOL.md
litra_beam_lx/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  build.yaml  config.yaml  run.sh
litra_ble/: __init__.py  bridge.py  cli.py  config.py  device.py  pairing.py
scripts/: install.sh
systemd/: litra-mqtt.service
udev/: 99-litra-ble.rules
